--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "face-api.js": "^0.22.2",
     "lucide-react": "^0.554.0",
     "react": "^19.1.1",
+    "react-day-picker": "^9.11.2",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.66.1",
     "react-router-dom": "^7.9.6",
