--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "face-api.js": "^0.22.2",
+    "framer-motion": "^12.23.26",
     "lucide-react": "^0.554.0",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.2",
